--- a/Contact.html
+++ b/Contact.html
@@ -9,7 +9,7 @@
   <table>
     <tr>
       <td>Address:</td>
-      <td>220141 Belarus Minsk Ryssijanova 50-904</td>
+      <td>220141 Belarus Minsk Russijanova 50-904</td>
     </tr>
     <tr>
       <td>Phone numbers:</td>
